Better separation of ConnectionContext.
The ones used within Receiver are instance of BuildableConnectionContext,
they are a little like Builder Pattern.

The events uses an instance of LockedConnectionContext, that is immutable
and ensure that acknowledge task is not forwarded.